Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-128675

q(u)int128 isn't supported with clang using MSVC's STL

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • 6.8.0 RC, 6.9.0 FF
    • 6.8.0 Beta4
    • Core: Other
    • None
    • Windows
    • 1f9a660eb (dev), 2f4680d14 (6.8), ace0e0ec0 (dev)

      Although building with clang(-cl) isn't supported, clang-cl is used by clangd under the hood on Windows in projects that compile with MSVC. When including any header that transitively includes qtypes.h, clangd errors with In included file: static assertion failed due to requirement 'std::is_signed_v<__int128>': Qt requires <type_traits> and <limits> to work for q(u)int128. This is because MSVC's STL (which clang-cl uses) doesn't support 128bit integers.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            thiago Thiago Macieira
            nerixyz Tom Fors
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There is 1 open Gerrit change